--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "energy_plus_wrapper"
+name = "energyplus_wrapper"
 version = "0.6.0"
 description = "some usefull function to run e+ locally"
 authors = ["Nicolas Cellier <contact@nicolas-cellier.net>"]
