--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ test_suite = tests
 include_package_data = True
 zip_safe = False
 install_requires =
+    appdirs
     pandas
     loguru
     plumbum
