--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ install_requires =
     pandas
     loguru
     plumbum
-    attr
+    attrs
     requests
     path.py
     pexpect
@@ -34,6 +34,7 @@ install_requires =
     coolname
     eppy
     fasteners
+    joblib
 
 [options.extras_require]
 docs =
