--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,8 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
-version = 0.8.2
+    Programming Language :: Python :: 3.9
+version = 1.0.0
 
 [options]
 python_requires = >= 3.7
